--- a/src/pug/components/about/video.pug
+++ b/src/pug/components/about/video.pug
@@ -19,5 +19,5 @@ include ../cards/media-card
     p.pb-2.use-text-subtitle2
       | Proin scelerisque sapien at enim faucibus, ut scelerisque urna consequat.
     .video-wrap
-      div.modal-trigger(data-target="video_modal" data-video="sf15CtXuw9M")
+      div.modal-trigger(data-target="video_modal" data-video="asdfasdfasdf")
         +media-card('Sed lacinia velit, ut malesuada eros interdum a', 'landscape', 'video', imgAPI.photo[11], '', '02:30')
